<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kusix.myflowers.MainActivity$PlaceholderFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/temp_name_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_name"
                android:textSize="@dimen/data_size" />

            <TextView
                android:id="@+id/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_data"
                android:textSize="@dimen/data_size" />

            <TextView
                android:id="@+id/temp_unit_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_unit"
                android:textSize="@dimen/data_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/light_name_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light_name"
                android:textSize="@dimen/data_size" />

            <TextView
                android:id="@+id/light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_data"
                android:textSize="@dimen/data_size" />

            <TextView
                android:id="@+id/light_unit_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light_unit"
                android:textSize="@dimen/data_size" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>